feat: 完善任务手册与双任务同步
更新内容：补全双语任务手册、原生/FTB 全阶段投影、事务回写与默认包安全迁移。

验证结果：生成器检查、定向测试及普通 Gradle 构建通过；当前共享树 216 个套件、987 项测试全部通过。

版本与协议：mod_version=0.2.146；ModNetwork.PROTOCOL_VERSION 保持 28。